feat: Update intent cache and smalltalk cache with new app generation requests and responses
- Modified intent-cache.json to reflect new user requests for app generation, including food booking and messaging applications.
- Updated smalltalk-cache.json with additional responses for online store inquiries and clarified customer ordering processes.
- Enhanced AiAppGeneratorService.java to store detailed app descriptions and handle continuation requests more effectively.
- Improved AiSystemPrompts.java to refine classification rules and generation strategies based on user input.
- Adjusted SmallTalkEngine.java to enhance responses for user queries related to drawing and creativity.
- Added new application configurations for e-commerce and online store apps, including entities and routes.
- Created JSON files for new application pages, including items list, dashboard, and create form pages.